# streamlit-k8s

./: Dockerfile  README.md  app.py  pyproject.toml
