[tool.poetry]
name = "streamlit-spacy-demo"
version = "0.1.0"
description = ""
authors = ["ming_yu <ming.yu@spglobal.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "0.69.2"
pandas = "1.1.3"
spacy = "^2.3.2"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
